# web-voter

./: LICENSE  README.md  package-lock.json
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: deploy-page.yml
backend/: .env  Cargo.toml
backend/src/: db-test.rs  db.rs  handlers.rs  main.rs  models.rs  postgres.rs
db/: init_db.sh
frontend/: app.js  package-lock.json  package.json
frontend-backup/: index.html
frontend/data/: db.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  App.jsx  Create.jsx  Home.jsx  Navbar.jsx  NotFound.jsx  RoomDetails.jsx  RoomList.jsx  UserDetails.jsx  UserList.jsx  VoteCard.jsx  VoteGrid.jsx  config.js  index.css  index.js  useFetch.jsx
