[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
actix-web = "4.0"
actix-cors = "0.6"
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.9"
dotenv = "0.15.0"
